[gd_scene load_steps=5 format=2]

[ext_resource path="res://PowBlock.gd" type="Script" id=1]
[ext_resource path="res://Misc/gfx/POWBlock.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="PowBlock" type="KinematicBody2D"]
collision_mask = 65
script = ExtResource( 1 )

[node name="PowBlockDetectionArea" type="Area2D" parent="."]
monitoring = false
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PowBlockDetectionArea"]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="BlastRadius" type="Area2D" parent="."]
scale = Vector2( 0.6, 0.6 )
gravity_vec = Vector2( 0, 0 )
monitorable = false
collision_layer = 0
collision_mask = 11

[node name="BlastCollision" type="CollisionShape2D" parent="BlastRadius"]
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="PowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="testTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.01

[connection signal="area_shape_entered" from="BlastRadius" to="." method="_on_BlastRadius_area_shape_entered"]
[connection signal="timeout" from="testTimer" to="." method="_on_testTimer_timeout"]
